# Copyright 2023 Aalyria Technologies, Inc., and its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "aalyria_api")

bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
bazel_dep(name = "googleapis-python", version = "1.0.0")
bazel_dep(name = "googleapis-java", version = "1.0.0")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.6.0")
bazel_dep(name = "rules_proto_grpc_doc", version = "5.6.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.6.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.6.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "toolchains_protoc", version = "0.4.3")

# Configure the protoc toolchain used by rules_proto_grpc to use protoc v31.1.
# This ensures that the version agrees with the protobuf dependency version,
# which is necessary because Protobuf C++ requires an exact match between its
# generated code version and its runtime version.
# (https://protobuf.dev/support/cross-version-runtime-guarantee/#cpp)
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v31.1",
)

bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.gson:gson:2.13.2",
        "com.google.googlejavaformat:google-java-format:1.31.0",
        "com.google.guava:guava:33.5.0-jre",
        "io.grpc:grpc-testing:1.76.0",
        "io.helidon.grpc:helidon-grpc-core:3.2.5",
        "junit:junit:4.13.2",
        "org.bouncycastle:bcprov-jdk18on:1.82",
        "org.mockito:mockito-core:4.5.1",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(maven, "maven")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.25.3",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_deckarep_golang_set_v2",
    "com_github_fullstorydev_grpcurl",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_gosnmp_gosnmp",
    "com_github_iancoleman_strcase",
    "com_github_jhump_protoreflect",
    "com_github_jonboulle_clockwork",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_prom2json",
    "com_github_rs_zerolog",
    "com_github_samber_lo",
    "com_github_sourcegraph_conc",
    "com_github_urfave_cli_v2",
    "com_github_vishvananda_netlink",
    "com_google_cloud_go",
    "com_google_cloud_go_longrunning",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "io_opentelemetry_go_proto_otlp",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
    "org_golang_x_sys",
)

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    java = True,
    python = True,
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "python_deps")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine_base",
    # docker.io/library/alpine:3.19.1
    digest = "sha256:c5b1261d6d3e43071626931fc004f70149baeba2c8ec672bd4f27761f8e1ad6b",  # 3.19.1 2024-01-26
    image = "docker.io/library/alpine",
    platforms = ["linux/amd64"],
)
use_repo(oci, "alpine_base", "alpine_base_linux_amd64")

bazel_dep(name = "org_outernetcouncil_nmts")
archive_override(
    module_name = "org_outernetcouncil_nmts",
    strip_prefix = "nmts-1.2.0",
    urls = "https://github.com/outernetcouncil/nmts/archive/refs/tags/v1.2.0.tar.gz",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "opentelemetry_common",
    build_file = "//api/third_party/opentelemetry:common.BUILD",
    strip_prefix = "opentelemetry-proto-main",
    urls = ["https://github.com/open-telemetry/opentelemetry-proto/archive/main.zip"],
)

# Resource proto
http_archive(
    name = "opentelemetry_resource",
    build_file = "//api/third_party/opentelemetry:resource.BUILD",
    strip_prefix = "opentelemetry-proto-main",
    urls = ["https://github.com/open-telemetry/opentelemetry-proto/archive/main.zip"],
)

# Metrics proto
http_archive(
    name = "opentelemetry_metrics",
    build_file = "//api/third_party/opentelemetry:metrics.BUILD",
    strip_prefix = "opentelemetry-proto-main",
    urls = ["https://github.com/open-telemetry/opentelemetry-proto/archive/main.zip"],
)
